--- a/styles.css
+++ b/styles.css
@@ -5,11 +5,16 @@
   font-family: monospace;
   background-color: #00ff99;
   width: 20%;
+  border: 4px dashed white;
+  margin-left: 20px;
+  padding: 15px;
 }
 
 .img {
   width: 100%;
   float: left;
+  padding: 15px;
+  margin-right: 15px;
 }
 
 body {
@@ -34,4 +39,6 @@ h1 {
 .intro {
   width: 50%;
   float:left;
+  padding: 15px;
+  margin-left: 20px;
 }
